# coconut

./: .gitignore  README.md  audio_embed.py  loss.py  pyproject.toml  train.py
parkokoro/: __init__.py  istftnet.py  model.py  modules.py
samples/: default-150.pt  default-475.pt
