[project]
name = "coconut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evotorch",
    "matplotlib",
    "numpy",
    "torch",
    "torchaudio",
    "librosa",
    "soundfile",
    "misaki[en]",
    "kokoro @ git+https://github.com/nytopop/kokoro.git@batching2",
    "pip",
    "datasets",
    "webrtcvad",
    "setuptools<=80.0.0", # pinned due to deprecation of pkg_resources @ 81+
    "scipy",
    "transformers",
]

[dependency-groups]
dev = ["ruff>=0.11.12"]

[tool.ruff]
line-length = 110
exclude = ["parkokoro/*.py"]

[tool.ruff.lint]
extend-select = ["E501"] # `line-too-long`
